--- a/public/assets/scss/auth.scss
+++ b/public/assets/scss/auth.scss
@@ -59,12 +59,11 @@
     padding: 18px 25px;
     display: block;
     border-radius: 7px;
-    border: none;
     outline: none;
     font-size: 16px;
     font-weight: 500;
     color: #1D1D39;
-    box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.05), inset 0px 0px 4px rgba(0, 0, 0, 0.25);
+    border: 1px solid rgba(29, 29, 57, 0.15);
 
     @media screen and (max-width:500px) {
         width: 100%;
@@ -95,12 +94,8 @@
     }
 }
 
-.reg{
-    background: #F3F2F8;
-    padding-top: 70px;
-    position: absolute;
-    height: 100%;
-    width: 100%;
+.registration{
+    background: #fff !important;
 }
 
 .reg-wrapper {
@@ -159,4 +154,12 @@
     .auth-title{
         font-size: 32px;
     }
+}
+
+// Исправление ошибок верстки
+
+.reg__row {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
 }
