--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -36,8 +36,12 @@ body {
 
 .main-section {
     padding: 0px 0px 50px 0px;
-    background: #F3F2F8;
+    background: #fff !important;
     overflow: hidden;
+}
+
+.main-section.index {
+    background: #F3F2F8 !important;
 }
 
 .head {
@@ -270,6 +274,7 @@ body {
 
     .banner__info {
         display: flex;
+        align-items: flex-start;
         flex-direction: column;
         gap: 40px;
     }
@@ -299,18 +304,21 @@ body {
 }
 
 .button {
-    display: block;
-    padding: 18px;
-    width: 200px;
+    @include flex-center;
+    padding: 18px 60px;
     border-radius: 30px;
     background: linear-gradient(135deg, #F8A4D8 0%, #6C63FF 100%);
     text-align: center;
     font-size: 16px;
-    font-weight: 700;
+    font-weight: 500;
     color: white;
-    transition: all .3s ease;
+    transition: all .3s ease-in-out !important;
     border: none !important;
     cursor: pointer;
+}
+
+.button.small {
+    padding: 18px 40px;
 }
 
 .button:hover {
@@ -506,6 +514,7 @@ body {
 
     .we__info {
         display: flex;
+        align-items: flex-start;
         flex-direction: column;
         gap: 30px;
 
@@ -2509,7 +2518,7 @@ textarea {
 }
 
 .opacity-anim.element-animation {
-    transition: all .7s ease-in-out !important;
+    transition: all .7s ease-in-out;
     opacity: 0;
 }
 
@@ -2594,4 +2603,135 @@ body::-webkit-scrollbar-thumb {
 
 .banner-cicrle a:hover .banner-line__figure {
     background: linear-gradient(135deg, $blue 0%, $blue  100%);
+}
+
+// Прижимаем футер к ниху страницы
+
+html, body {
+    height: 100%;
+}
+
+.wrapper {
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.main {
+    flex: 1 1 auto;
+}
+
+// Стили для preloader
+
+.preloader {
+    background-color: #FFFFFF;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    @include flex-center;
+    opacity: 0;
+    z-index: -100;
+    @include  transition;
+}
+
+body.active::-webkit-scrollbar {
+    display: none;
+}
+
+.preloader.active {
+    opacity: 1;
+    z-index: 100;
+}
+
+.lds-roller {
+    display: inline-block;
+    position: relative;
+    width: 80px;
+    height: 80px;
+}
+.lds-roller div {
+    animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+    transform-origin: 40px 40px;
+}
+.lds-roller div:after {
+    content: " ";
+    display: block;
+    position: absolute;
+    width: 7px;
+    height: 7px;
+    border-radius: 50%;
+    background: $blue;
+    margin: -4px 0 0 -4px;
+}
+.lds-roller div:nth-child(1) {
+    animation-delay: -0.036s;
+}
+.lds-roller div:nth-child(1):after {
+    top: 63px;
+    left: 63px;
+}
+.lds-roller div:nth-child(2) {
+    animation-delay: -0.072s;
+}
+.lds-roller div:nth-child(2):after {
+    top: 68px;
+    left: 56px;
+}
+.lds-roller div:nth-child(3) {
+    animation-delay: -0.108s;
+}
+.lds-roller div:nth-child(3):after {
+    top: 71px;
+    left: 48px;
+}
+.lds-roller div:nth-child(4) {
+    animation-delay: -0.144s;
+}
+.lds-roller div:nth-child(4):after {
+    top: 72px;
+    left: 40px;
+}
+.lds-roller div:nth-child(5) {
+    animation-delay: -0.18s;
+}
+.lds-roller div:nth-child(5):after {
+    top: 71px;
+    left: 32px;
+}
+.lds-roller div:nth-child(6) {
+    animation-delay: -0.216s;
+}
+.lds-roller div:nth-child(6):after {
+    top: 68px;
+    left: 24px;
+}
+.lds-roller div:nth-child(7) {
+    animation-delay: -0.252s;
+}
+.lds-roller div:nth-child(7):after {
+    top: 63px;
+    left: 17px;
+}
+.lds-roller div:nth-child(8) {
+    animation-delay: -0.288s;
+}
+.lds-roller div:nth-child(8):after {
+    top: 56px;
+    left: 12px;
+}
+@keyframes lds-roller {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.reg__row {
+    gap: 30px;
+}
+
+.check-wrapper {
+    flex: 0 1 50%;
 }
