--- a/public/assets/scss/profile.scss
+++ b/public/assets/scss/profile.scss
@@ -118,24 +118,62 @@
             gap: 50px;
 
             .ava {
-                width: 130px;
-                height: 130px;
+                width: 170px;
+                height: 170px;
                 position: relative;
 
                 form {
-                    position: absolute;
-                    top: 80%;
-                    left: 70%;
 
                     input {
                         display: none;
                     }
+
+                    .open {
+                        width: 35px;
+                        height: 35px;
+                        position: absolute;
+                        bottom: -10px;
+                        right: 0;
+                    }
                 }
 
-                .ava-img {
+                .hover-open {
+                    position: absolute;
+                    opacity: 0;
+                    z-index: 0;
+                    @include transition;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                    pointer-events: none;
+                }
+
+                .ava-img-label {
+                    padding: 5px;
                     width: 100%;
                     height: 100%;
-                    object-fit: cover;
+                    border-radius: 100px;
+
+                    @include transition;
+
+                    &:hover {
+                        filter: brightness(0.7);
+                    }
+
+                    &:hover + .hover-open {
+                        opacity: 1;
+                        z-index: 1;
+                    }
+                }
+
+                .ava-img-label.error {
+                    border: 1px solid $red;
+                }
+
+                .ava-img-label img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: contain;
                     border-radius: 100px;
                 }
             }
@@ -164,9 +202,10 @@
                 flex-direction: column;
                 gap: 15px;
 
+                height: 91px;
+
                 label {
-                    font-size: 14px;
-                    padding: 0px 10px;
+                    font-size: 16px;
                 }
             }
 
@@ -194,7 +233,7 @@
 
         .profile__personal-password {
             .title {
-                font-size: 36px;
+                font-size: 28px !important;
                 font-weight: 700;
                 margin-bottom: 40px;
             }
