--- a/resources/scss/modals.scss
+++ b/resources/scss/modals.scss
@@ -1,17 +1,15 @@
 // Модальное окно "Не авторизован"
 
 .modal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100vh;
-    width: 100%;
+    // height: 100vh;
+    // width: 100%;
     @include flex-center;
-    background-color: rgba($color: $dark, $alpha: 0.9);
+    background: transparent;
+    // background-color: rgba($color: $dark, $alpha: 0.9);
 }
 
 .modal__container {
-    background: #FFFFFF;
+    background: transparent;
     border-radius: 12px;
     padding: 40px;
     @include gap-column(70px);
@@ -23,6 +21,7 @@
 }
 
 .modal__close {
+    cursor: pointer;
     align-self: flex-end;
 }
 
@@ -109,6 +108,10 @@
     &:hover svg path {
         fill: $blue;
     }
+}
+
+.delete-modal__no {
+    cursor: pointer;
 }
 
 // Модальное окно оценки
