--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -366,7 +366,7 @@ body {
 // ------------- advantage
 
 .section-padding {
-    padding: 80px 0px;
+    padding: 100px 0 !important;
 }
 
 .title-main {
@@ -618,8 +618,10 @@ body {
         }
 
         .best-course__img {
+            display: flex;
+            justify-content: flex-end;
             img {
-                height: 100%;
+                height: 200px;
                 object-fit: cover;
             }
         }
@@ -3083,4 +3085,57 @@ input[type=chekbox] {
             object-fit: contain;
         }
     }
+}
+
+.new-users-table__name.admin-control__buttons form {
+    height: 25px !important;
+}
+
+.banner__title {
+    line-height: calc(78 / 64 * 100%);
+}
+
+.title-main h2 {
+    line-height: calc(59 / 48 * 100%);
+}
+
+.we__title {
+    line-height: 130%;
+}
+
+.advantages__item h4 {
+    font-size: 24px;
+    line-height: 130%;
+}
+
+.video__inputs {
+    @include gap-column(30px);
+}
+
+.video__input-column {
+
+    @include gap-row(30px);
+
+    align-items: center;
+
+    input {
+        flex: 0 1 90%;
+    }
+
+    .add-video-paths {
+        @include button(20px, 0px, darkerBlueFill);
+        width: 183px;
+        border-radius: 7px;
+    }
+
+    .remove {
+        width: 183px;
+        @include button(20px, 0px, danger);
+        border-radius: 7px;
+    }
+
+}
+
+.course-cat-lev-row {
+    @include gap-row(30px);
 }
